fix(blog.eembouz.com) #2 fix overflow

--- a/packages/ui/src/css/layout/layout.css
+++ b/packages/ui/src/css/layout/layout.css
@@ -41,7 +41,6 @@
 .page-wrapper {
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
   min-height: 100vh;
   width: 100%;
 }
